apps/infra-traefik/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.asmglobal.cloud`)
      kind: Rule
      services:
        - name: traefik
          port: 8080
      middlewares:
        - name: security-headers
        - name: gzip-compress
